--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/pokemon.js"></script>
         <script src="scripts/controllers/nav.js"></script>
+        <script src="scripts/services/battlemanager.js"></script>
         <!-- endbuild -->
 </body>
 </html>
