--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/services/battlemanager.js"></script>
         <script src="scripts/controllers/spinner.js"></script>
         <script src="scripts/services/loadingspinner.js"></script>
+        <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
 </html>
