--- a/app/index.html
+++ b/app/index.html
@@ -29,20 +29,29 @@
     <!-- Our loading spinner for the app -->
   <div ng-controller = "SpinnerCtrl">
       <div class = "darkOverlay"
-      ng-if="loading.isLoading()">
+      ng-if="loading.isLoading() ||
+      loading.getErrors.length > 0">
       </div>
       <div class = "loadingContainer"
-      ng-if="loading.isLoading()">
+      ng-if="loading.isLoading() ||
+      loading.getErrors.length > 0">
 
-          <h2 ng-if="loading.errors.length < 1">
+          <h2 ng-if="loading.getErrors().length < 1">
               Walking Through Tall Grass...
           </h2>
 
           <!-- Support for errors -->
-          <div ng-if="loading.errors.length > 0"
-              ng-repeat="error in loading.errors">
+          <div ng-if="loading.getErrors().length > 0"
+              ng-repeat="error in loading.getErrors()">
 
               <h2>{{error.message}}</h2>
+
+              <h2 ng-if = "error.link">
+                  <a ng-href = "{{error.link}}"
+                  target="_blank">
+                  {{error.linkTitle}}
+                  </a>
+              </h2>
           </div>
 
           <div class = "spinnerAnimation">
